--- a/package.json
+++ b/package.json
@@ -26,15 +26,21 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3",
-    "typeorm": "^0.3.6",
-    "pino": "^8.1.0",
-    "pino-pretty": "^8.1.0",
-    "express": "^4.18.1",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "add": "^2.0.6",
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.3",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.21.0",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "pino": "^8.1.0",
+    "pino-pretty": "^8.1.0",
+    "prettier": "^2.7.1",
+    "typeorm": "^0.3.6",
+    "yarn": "^1.22.19",
     "yup": "^0.32.11"
   }
 }
