--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
     "nodemon": "^2.0.18",
     "ts-node": "^10.8.1",
@@ -42,6 +43,8 @@
     "pino": "^8.1.0",
     "pino-pretty": "^8.1.0",
     "prettier": "^2.7.1",
+    "redis": "^4.2.0",
+    "redis-commander": "^0.8.0",
     "typeorm": "^0.3.6",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
