--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
+    "@types/nodemailer": "^6.4.5",
     "nodemon": "^2.0.18",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
@@ -39,6 +40,7 @@
     "eslint": "^8.21.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
     "pino": "^8.1.0",
     "pino-pretty": "^8.1.0",
