--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/suryanirvana/node-boilerplate#readme",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
     "@types/nodemailer": "^6.4.5",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.18",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
@@ -35,18 +38,23 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.3",
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "express": "^4.18.1",
+    "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
     "pino": "^8.1.0",
+    "pino-http": "^8.2.0",
     "pino-pretty": "^8.1.0",
     "prettier": "^2.7.1",
     "redis": "^4.2.0",
     "redis-commander": "^0.8.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
     "typeorm": "^0.3.6",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
