--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
               uses: appleboy/ssh-action@master
               with:
                   host: ${{ secrets.SSH_AWS_SERVER_IP }}
-                  username: ${{ secret.SSH_SERVER_USER }}
-                  key: ${{ secret.SSH_PRIVATE_KEY }}
+                  username: ${{ secrets.SSH_SERVER_USER }}
+                  key: ${{ secrets.SSH_PRIVATE_KEY }}
                   script: |
                       cd ~/.scripts
                       ./docker-deploy.sh
