--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "express": "^4.18.1",
+    "handlebars": "^4.7.7",
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.7",
