--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,9 @@ services:
             - SIGN_ACCESS_TOKEN_PUBLIC=${SIGN_ACCESS_TOKEN_PUBLIC}
             - SIGN_REFRESH_TOKEN_PRIVATE=${SIGN_REFRESH_TOKEN_PRIVATE}
             - SIGN_REFRESH_TOKEN_PUBLIC=${SIGN_REFRESH_TOKEN_PUBLIC}
+            - ALGOLIA_APPLICATION_ID=${ALGOLIA_APPLICATION_ID}
+            - ALGOLIA_ADMIN_KEY=${ALGOLIA_ADMIN_KEY}
+            - ALGOLIA_SEARCH_KEY=${ALGOLIA_SEARCH_KEY}
+            - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+            - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
+            - S3_ACCESS_KEY_SECRET=${S3_ACCESS_KEY_SECRET}
