--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.0.0",
     "@types/nodemailer": "^6.4.5",
     "@types/swagger-jsdoc": "^6.0.1",
@@ -36,21 +38,26 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.168.0",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "add": "^2.0.6",
+    "algoliasearch": "^4.14.2",
+    "aws-sdk": "^2.1213.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dayjs": "^1.11.3",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "eslint": "^8.21.0",
     "express": "^4.18.1",
     "geolib": "^3.3.3",
     "handlebars": "^4.7.7",
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
     "pino": "^8.1.0",
